src/objects/Dealer_Product_List__c/Dealer_Product_List__c.object-meta.xml
<CustomObject>
    <label>Dealer Product Categories</label>
    <nameField>
        <label>Dealer Product Categories</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dealer Product Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>