src/objects/Dealer_Product_List__c/fields/X15C__c.field-meta.xml
<CustomField>
    <fullName>X15C__c</fullName>
    <defaultValue>false</defaultValue>
    <label>15C</label>
    <type>Checkbox</type>
</CustomField>