src/objects/Dealer_Product_List__c/fields/X20D__c.field-meta.xml
<CustomField>
    <fullName>X20D__c</fullName>
    <defaultValue>false</defaultValue>
    <label>20D</label>
    <type>Checkbox</type>
</CustomField>