src/objects/Dealer_Product_List__c/fields/X20E__c.field-meta.xml
<CustomField>
    <fullName>X20E__c</fullName>
    <defaultValue>false</defaultValue>
    <label>20E</label>
    <type>Checkbox</type>
</CustomField>