src/objects/Dealer_Product_List__c/fields/X30__c.field-meta.xml
<CustomField>
    <fullName>X30__c</fullName>
    <defaultValue>false</defaultValue>
    <label>30</label>
    <type>Checkbox</type>
</CustomField>